--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0044.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0044.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0044.png">
-      <!--<div class="ocr_carea" title="bbox 302 188 1340 242">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 318 198 1324 237">
         <span id="w_0" class="ocr_word" title="bbox 318 198 432 237">
           <span class="alternatives">
@@ -25,10 +23,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 1046 340 1332 404">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 1061 352 1316 399">
         <span id="w_2" class="ocr_word" title="bbox 1061 354 1131 398">
           <span class="alternatives">
@@ -38,14 +32,10 @@
         </span>
         <span id="w_3" class="ocr_word" title="bbox 1161 352 1316 399">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">A€tio.</ins>
+            <ins class="alt" title="nlp 0.94">€tio.</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 280 434 2074 3218">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 436 448 2058 508">
         <span id="w_4" class="ocr_word" title="bbox 436 449 600 506">
           <span class="alternatives">
@@ -103,17 +93,11 @@
         </span>
         <span id="w_13" class="ocr_word" title="bbox 1981 450 2058 494">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">At-</ins>
+            <ins title="nlp 2.00">Atque</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 316 519 2055 577">
-        <span id="w_14" class="ocr_word" title="bbox 316 536 398 577">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">que</ins>
-            <del title="nlp 0.90">Atque</del>
-          </span>
-        </span>
         <span id="w_15" class="ocr_word" title="bbox 430 522 573 564">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Stoica</ins>
@@ -450,17 +434,11 @@
         </span>
         <span id="w_69" class="ocr_word" title="bbox 1989 892 2056 918">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">us-</ins>
+            <ins title="nlp 2.00">usque</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 313 945 2055 1004">
-        <span id="w_70" class="ocr_word" title="bbox 313 961 395 1002">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">que</ins>
-            <del title="nlp 0.90">usque</del>
-          </span>
-        </span>
         <span id="w_71" class="ocr_word" title="bbox 414 947 467 989">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ad</ins>
@@ -623,17 +601,11 @@
         </span>
         <span id="w_97" class="ocr_word" title="bbox 1914 1089 2055 1132">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">condi-</ins>
+            <ins title="nlp 2.00">conditorem</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 309 1159 2055 1217">
-        <span id="w_98" class="ocr_word" title="bbox 309 1162 446 1203">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">torem</ins>
-            <del title="nlp 0.90">conditorem</del>
-          </span>
-        </span>
         <span id="w_99" class="ocr_word" title="bbox 478 1162 545 1203">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">tot</ins>
@@ -690,17 +662,11 @@
         </span>
         <span id="w_108" class="ocr_word" title="bbox 1943 1175 2055 1204">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">com-</ins>
+            <ins title="nlp 2.00">commodo</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 309 1230 2054 1286">
-        <span id="w_109" class="ocr_word" title="bbox 309 1231 437 1274">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">modo</ins>
-            <del title="nlp 0.90">commodo</del>
-          </span>
-        </span>
         <span id="w_110" class="ocr_word" title="bbox 470 1231 726 1274">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">selectorum</ins>
@@ -969,17 +935,11 @@
         </span>
         <span id="w_153" class="ocr_word" title="bbox 1950 1516 2054 1573">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">legi-</ins>
+            <ins title="nlp 2.00">legimus,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 306 1585 2052 1644">
-        <span id="w_154" class="ocr_word" title="bbox 306 1601 415 1642">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mus,</ins>
-            <del title="nlp 0.90">legimus,</del>
-          </span>
-        </span>
         <span id="w_155" class="ocr_word" title="bbox 448 1588 619 1629">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">vetusta</ins>
@@ -1198,8 +1158,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 423 1940 2048 1999">
         <span id="w_190" class="ocr_word" title="bbox 423 1940 515 1984">
           <span class="alternatives">
@@ -1511,17 +1469,11 @@
         </span>
         <span id="w_240" class="ocr_word" title="bbox 1952 2241 2046 2284">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">gra-</ins>
+            <ins title="nlp 2.00">gravissimos</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 301 2297 2044 2355">
-        <span id="w_241" class="ocr_word" title="bbox 301 2297 503 2341">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">vissimos</ins>
-            <del title="nlp 0.90">gravissimos</del>
-          </span>
-        </span>
         <span id="w_242" class="ocr_word" title="bbox 539 2298 790 2354">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">scriptorem</ins>
@@ -1610,17 +1562,11 @@
         </span>
         <span id="w_256" class="ocr_word" title="bbox 1953 2371 2045 2411">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tan-</ins>
+            <ins title="nlp 2.00">tantum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 299 2438 2041 2498">
-        <span id="w_257" class="ocr_word" title="bbox 299 2444 392 2482">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tum</ins>
-            <del title="nlp 0.90">tantum</del>
-          </span>
-        </span>
         <span id="w_258" class="ocr_word" title="bbox 424 2440 595 2483">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Stoicos</ins>
@@ -1721,17 +1667,11 @@
         </span>
         <span id="w_274" class="ocr_word" title="bbox 1836 2509 2041 2567">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Chrysip-</ins>
+            <ins title="nlp 2.00">Chrysippum,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 297 2581 2040 2640">
-        <span id="w_275" class="ocr_word" title="bbox 297 2598 412 2640">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pum,</ins>
-            <del title="nlp 0.90">Chrysippum,</del>
-          </span>
-        </span>
         <span id="w_276" class="ocr_word" title="bbox 443 2583 732 2626">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Posidonium.</ins>
@@ -1838,17 +1778,11 @@
         </span>
         <span id="w_293" class="ocr_word" title="bbox 1922 2652 2041 2696">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Posi-</ins>
+            <ins title="nlp 2.00">Posidonio</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 297 2723 2039 2783">
-        <span id="w_294" class="ocr_word" title="bbox 297 2725 426 2768">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">donio</ins>
-            <del title="nlp 0.90">Posidonio</del>
-          </span>
-        </span>
         <span id="w_295" class="ocr_word" title="bbox 464 2725 675 2783">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">generalis</ins>
@@ -1961,17 +1895,11 @@
         </span>
         <span id="w_313" class="ocr_word" title="bbox 1941 2795 2039 2838">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sub-</ins>
+            <ins title="nlp 2.00">subsisteret,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 296 2866 2037 2927">
-        <span id="w_314" class="ocr_word" title="bbox 296 2866 478 2924">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sisteret,</ins>
-            <del title="nlp 0.90">subsisteret,</del>
-          </span>
-        </span>
         <span id="w_315" class="ocr_word" title="bbox 498 2868 551 2911">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ad</ins>
@@ -2182,17 +2110,11 @@
             <del title="nlp 0.90">enim</del>
           </span>
         </span>
-        <span id="w_349" class="ocr_word" title="bbox 1945 3081 2035 3124">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">the-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 296 3152 2033 3214">
         <span id="w_350" class="ocr_word" title="bbox 296 3166 422 3196">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sauro</ins>
-            <del title="nlp 0.90">thesauro</del>
+            <ins title="nlp 2.00">thesauro</ins>
           </span>
         </span>
         <span id="w_351" class="ocr_word" title="bbox 453 3167 558 3196">
@@ -2250,8 +2172,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
