--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0045.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0045.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0045.png">
-      <!--<div class="ocr_carea" title="bbox 248 174 2044 1214">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 1008 182 2024 220">
         <span id="w_0" class="ocr_word" title="bbox 1008 184 1276 219">
           <span class="alternatives">
@@ -25,8 +23,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 266 291 2027 350">
         <span id="w_2" class="ocr_word" title="bbox 266 307 318 337">
           <span class="alternatives">
@@ -90,17 +86,11 @@
         </span>
         <span id="w_12" class="ocr_word" title="bbox 1936 308 2027 337">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">om-</ins>
+            <ins title="nlp 2.00">omnibus</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 268 364 2025 423">
-        <span id="w_13" class="ocr_word" title="bbox 268 364 397 408">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nibus</ins>
-            <del title="nlp 0.90">omnibus</del>
-          </span>
-        </span>
         <span id="w_14" class="ocr_word" title="bbox 424 364 793 419">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">dissentientibus,</ins>
@@ -269,17 +259,11 @@
         </span>
         <span id="w_41" class="ocr_word" title="bbox 1926 507 2023 551">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">doc-</ins>
+            <ins title="nlp 2.00">doctrina</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 267 577 2024 635">
-        <span id="w_42" class="ocr_word" title="bbox 267 577 382 621">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">trina</ins>
-            <del title="nlp 0.90">doctrina</del>
-          </span>
-        </span>
         <span id="w_43" class="ocr_word" title="bbox 410 578 543 621">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">latere</ins>
@@ -398,17 +382,11 @@
         </span>
         <span id="w_62" class="ocr_word" title="bbox 1891 650 2024 707">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Chrj-</ins>
+            <ins title="nlp 2.00">Chrysippum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 268 720 2025 779">
-        <span id="w_63" class="ocr_word" title="bbox 268 722 439 778">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sippura</ins>
-            <del title="nlp 0.90">Chrjsippura</del>
-          </span>
-        </span>
         <span id="w_64" class="ocr_word" title="bbox 468 721 727 764">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Posidonius</ins>
@@ -423,7 +401,7 @@
         </span>
         <span id="w_66" class="ocr_word" title="bbox 998 720 1135 778">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">tulit),</ins>
+            <ins title="nlp 2.00">tulit),</ins>
           </span>
         </span>
         <span id="w_67" class="ocr_word" title="bbox 1166 720 1419 777">
@@ -446,17 +424,11 @@
         </span>
         <span id="w_70" class="ocr_word" title="bbox 1921 737 2025 778">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quo-</ins>
+            <ins title="nlp 2.00">quoque</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 266 792 2022 851">
-        <span id="w_71" class="ocr_word" title="bbox 266 807 348 849">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">que</ins>
-            <del title="nlp 0.90">quoque</del>
-          </span>
-        </span>
         <span id="w_72" class="ocr_word" title="bbox 368 808 461 836">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">esse</ins>
@@ -681,17 +653,11 @@
         </span>
         <span id="w_108" class="ocr_word" title="bbox 1888 1010 2023 1052">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">incer-</ins>
+            <ins title="nlp 2.00">incertorum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 264 1079 2022 1137">
-        <span id="w_109" class="ocr_word" title="bbox 264 1083 406 1122">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">torum</ins>
-            <del title="nlp 0.90">incertorum</del>
-          </span>
-        </span>
         <span id="w_110" class="ocr_word" title="bbox 438 1095 618 1123">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">numero</ins>
@@ -734,17 +700,11 @@
             <del title="nlp 0.90">quae</del>
           </span>
         </span>
-        <span id="w_117" class="ocr_word" title="bbox 1887 1079 2022 1137">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Chry-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 265 1151 1012 1209">
         <span id="w_118" class="ocr_word" title="bbox 265 1152 457 1208">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sippeam</ins>
-            <del title="nlp 0.90">Chrysippeam</del>
+            <ins title="nlp 2.00">Chrysippeam</ins>
           </span>
         </span>
         <span id="w_119" class="ocr_word" title="bbox 490 1153 702 1209">
@@ -760,10 +720,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 246 1352 2036 3222">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 385 1365 2020 1424">
         <span id="w_121" class="ocr_word" title="bbox 385 1365 476 1410">
           <span class="alternatives">
@@ -895,17 +851,11 @@
         </span>
         <span id="w_142" class="ocr_word" title="bbox 1899 1441 2022 1482">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">semi-</ins>
+            <ins title="nlp 2.00">semimortuae</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 262 1511 2019 1569">
-        <span id="w_143" class="ocr_word" title="bbox 262 1513 457 1553">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">raortuae</ins>
-            <del title="nlp 0.90">semiraortuae</del>
-          </span>
-        </span>
         <span id="w_144" class="ocr_word" title="bbox 488 1511 678 1566">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">aliquam</ins>
@@ -1112,17 +1062,11 @@
         </span>
         <span id="w_177" class="ocr_word" title="bbox 1852 1726 2020 1769">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aristo-</ins>
+            <ins title="nlp 2.00">Aristotelici</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 263 1796 2020 1854">
-        <span id="w_178" class="ocr_word" title="bbox 263 1796 380 1839">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">telici</ins>
-            <del title="nlp 0.90">Aristotelici</del>
-          </span>
-        </span>
         <span id="w_179" class="ocr_word" title="bbox 413 1811 585 1853">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">quoque</ins>
@@ -1173,17 +1117,11 @@
         </span>
         <span id="w_187" class="ocr_word" title="bbox 1875 1802 2020 1842">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aucto-</ins>
+            <ins title="nlp 2.00">auctores</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 261 1868 2019 1928">
-        <span id="w_188" class="ocr_word" title="bbox 261 1882 329 1911">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">res</ins>
-            <del title="nlp 0.90">auctores</del>
-          </span>
-        </span>
         <span id="w_189" class="ocr_word" title="bbox 355 1883 465 1925">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">quos</ins>
@@ -1276,17 +1214,11 @@
             <del title="nlp 0.90">suppeditabant,</del>
           </span>
         </span>
-        <span id="w_204" class="ocr_word" title="bbox 1922 1956 2020 1985">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">con-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 262 2011 722 2068">
         <span id="w_205" class="ocr_word" title="bbox 262 2025 409 2068">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">gerere</ins>
-            <del title="nlp 0.90">congerere</del>
+            <ins title="nlp 2.00">congerere</ins>
           </span>
         </span>
         <span id="w_206" class="ocr_word" title="bbox 441 2012 548 2054">
@@ -1302,8 +1234,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 380 2082 2018 2142">
         <span id="w_208" class="ocr_word" title="bbox 380 2082 448 2125">
           <span class="alternatives">
@@ -1561,17 +1491,11 @@
         </span>
         <span id="w_249" class="ocr_word" title="bbox 1904 2371 2018 2415">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Stoi-</ins>
+            <ins title="nlp 2.00">Stoicorum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 265 2442 1603 2501">
-        <span id="w_250" class="ocr_word" title="bbox 265 2456 414 2484">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">corum</ins>
-            <del title="nlp 0.90">Stoicorum</del>
-          </span>
-        </span>
         <span id="w_251" class="ocr_word" title="bbox 446 2442 582 2485">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">libros</ins>
@@ -1609,8 +1533,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 382 2513 2015 2573">
         <span id="w_257" class="ocr_word" title="bbox 382 2513 560 2557">
           <span class="alternatives">
@@ -1710,67 +1632,61 @@
             <del title="nlp 0.90">spectant</del>
           </span>
         </span>
-        <span id="w_273" class="ocr_word" title="bbox 1699 2587 1786 2645" xml:lang="grc">
+        <span id="w_273" class="ocr_word" title="bbox 1699 2587 1786 2645" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">(ὅτι</ins>
+            <ins class="alt" title="nlp 1.00">ὅτι</ins>
           </span>
         </span>
-        <span id="w_274" class="ocr_word" title="bbox 1806 2589 1947 2644" xml:lang="grc">
+        <span id="w_274" class="ocr_word" title="bbox 1806 2589 1947 2644" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μόνον</ins>
           </span>
         </span>
-        <span id="w_275" class="ocr_word" title="bbox 1965 2589 2015 2631" xml:lang="grc">
+        <span id="w_275" class="ocr_word" title="bbox 1965 2589 2015 2631" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 263 2658 2015 2717">
-        <span id="w_276" class="ocr_word" title="bbox 263 2659 401 2702" xml:lang="grc">
+        <span id="w_276" class="ocr_word" title="bbox 263 2659 401 2702" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">mλὸν</ins>
-            <del title="nlp 0.90">ἁλὸν</del>
-            <del title="nlp 0.89">ἑλὸν</del>
-            <del title="nlp 0.88">ὀλὸν</del>
+            <ins title="nlp 2.00">καλὸν</ins>
           </span>
         </span>
-        <span id="w_277" class="ocr_word" title="bbox 432 2658 621 2714" xml:lang="grc">
+        <span id="w_277" class="ocr_word" title="bbox 432 2658 621 2714" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀγαθόν,</ins>
           </span>
         </span>
-        <span id="w_278" class="ocr_word" title="bbox 654 2675 722 2701" xml:lang="grc">
+        <span id="w_278" class="ocr_word" title="bbox 654 2675 722 2701" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὅτι</ins>
           </span>
         </span>
-        <span id="w_279" class="ocr_word" title="bbox 748 2660 793 2702" xml:lang="grc">
+        <span id="w_279" class="ocr_word" title="bbox 748 2660 793 2702" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">αὶ</ins>
+            <ins title="nlp 2.00">αἰ</ins>
           </span>
         </span>
-        <span id="w_280" class="ocr_word" title="bbox 825 2658 973 2715" xml:lang="grc">
+        <span id="w_280" class="ocr_word" title="bbox 825 2658 973 2715" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀρεταὶ</ins>
           </span>
         </span>
-        <span id="w_281" class="ocr_word" title="bbox 1006 2663 1423 2703" xml:lang="grc">
+        <span id="w_281" class="ocr_word" title="bbox 1006 2663 1423 2703" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀντακολουθοῦσιν</ins>
           </span>
         </span>
-        <span id="w_282" class="ocr_word" title="bbox 1449 2659 1658 2715" xml:lang="grc">
+        <span id="w_282" class="ocr_word" title="bbox 1449 2659 1658 2715" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">όλλὴλαις</ins>
-            <del title="nlp 0.90">Πόλλαις</del>
-            <del title="nlp 0.89">κόλλαις</del>
-            <del title="nlp 0.88">σέλλαις</del>
+            <ins title="nlp 2.00">ἀλλήλαις</ins>
           </span>
         </span>
         <span id="w_283" class="ocr_word" title="bbox 1683 2659 1793 2717">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">etc),</ins>
+            <ins title="nlp 2.00">etc),</ins>
           </span>
         </span>
         <span id="w_284" class="ocr_word" title="bbox 1825 2660 1898 2715">
@@ -1999,12 +1915,12 @@
         </span>
         <span id="w_320" class="ocr_word" title="bbox 1096 2946 1171 3003">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">„de</ins>
+            <ins title="nlp 2.00">„de</ins>
           </span>
         </span>
         <span id="w_321" class="ocr_word" title="bbox 1203 2947 1369 2989">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">aniraa"</ins>
+            <ins title="nlp 2.00">anima''</ins>
           </span>
         </span>
         <span id="w_322" class="ocr_word" title="bbox 1414 2947 1524 2989">
@@ -2109,7 +2025,7 @@
         </span>
         <span id="w_338" class="ocr_word" title="bbox 679 3089 837 3132">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">.saecnli</ins>
+            <ins title="nlp 2.00">saeculi</ins>
           </span>
         </span>
         <span id="w_339" class="ocr_word" title="bbox 882 3090 1028 3131">
@@ -2145,8 +2061,7 @@
       <span class="ocr_line" title="bbox 263 3159 2015 3217">
         <span id="w_344" class="ocr_word" title="bbox 263 3162 411 3215">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quenti</ins>
-            <del title="nlp 0.90">frequenti</del>
+            <ins title="nlp 2.00">frequenti</ins>
           </span>
         </span>
         <span id="w_345" class="ocr_word" title="bbox 461 3159 707 3204">
@@ -2198,8 +2113,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
