--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0047.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0047.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0047.png">
-      <!--<div class="ocr_carea" title="bbox 204 166 1986 3204">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 957 176 1965 215">
         <span id="w_0" class="ocr_word" title="bbox 957 177 1225 213">
           <span class="alternatives">
@@ -24,8 +22,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 224 283 1969 344">
         <span id="w_2" class="ocr_word" title="bbox 224 285 416 342">
           <span class="alternatives">
@@ -344,8 +340,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 339 710 1965 768">
         <span id="w_53" class="ocr_word" title="bbox 339 711 458 756">
           <span class="alternatives">
@@ -411,7 +405,7 @@
       <span class="ocr_line" title="bbox 221 781 1967 843">
         <span id="w_63" class="ocr_word" title="bbox 221 787 323 840">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">erat^</ins>
+            <ins title="nlp 2.00">erat,</ins>
           </span>
         </span>
         <span id="w_64" class="ocr_word" title="bbox 354 783 512 840">
@@ -532,17 +526,11 @@
         </span>
         <span id="w_83" class="ocr_word" title="bbox 1758 858 1968 915">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">intellige-</ins>
+            <ins title="nlp 2.00">intelligeretur</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 220 925 1965 986">
-        <span id="w_84" class="ocr_word" title="bbox 220 929 337 969">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">retur</ins>
-            <del title="nlp 0.90">intelligeretur</del>
-          </span>
-        </span>
         <span id="w_85" class="ocr_word" title="bbox 361 926 415 968">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ab</ins>
@@ -630,8 +618,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 368 1125 1814 1182">
         <span id="w_99" class="ocr_word" title="bbox 368 1127 670 1182">
           <span class="alternatives">
@@ -670,8 +656,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 339 1208 1968 1272">
         <span id="w_105" class="ocr_word" title="bbox 339 1210 519 1254">
           <span class="alternatives">
@@ -717,17 +701,11 @@
         </span>
         <span id="w_112" class="ocr_word" title="bbox 1890 1215 1968 1259">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">At-</ins>
+            <ins title="nlp 2.00">Atque</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 220 1280 1967 1343">
-        <span id="w_113" class="ocr_word" title="bbox 220 1297 303 1339">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">que</ins>
-            <del title="nlp 0.90">Atque</del>
-          </span>
-        </span>
         <span id="w_114" class="ocr_word" title="bbox 335 1282 575 1340">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">logicorum</ins>
@@ -1008,7 +986,7 @@
         </span>
         <span id="w_159" class="ocr_word" title="bbox 1826 1574 1852 1626">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">§</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_160" class="ocr_word" title="bbox 1883 1573 1966 1616">
@@ -1024,49 +1002,49 @@
             <del title="nlp 0.90">verba:</del>
           </span>
         </span>
-        <span id="w_162" class="ocr_word" title="bbox 398 1643 580 1695" xml:lang="grc">
+        <span id="w_162" class="ocr_word" title="bbox 398 1643 580 1695" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λογικοῦ</ins>
           </span>
         </span>
-        <span id="w_163" class="ocr_word" title="bbox 611 1641 750 1683" xml:lang="grc">
+        <span id="w_163" class="ocr_word" title="bbox 611 1641 750 1683" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τόπου</ins>
           </span>
         </span>
-        <span id="w_164" class="ocr_word" title="bbox 775 1655 828 1682" xml:lang="grc">
+        <span id="w_164" class="ocr_word" title="bbox 775 1655 828 1682" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_165" class="ocr_word" title="bbox 854 1647 942 1682" xml:lang="grc">
+        <span id="w_165" class="ocr_word" title="bbox 854 1647 942 1682" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_166" class="ocr_word" title="bbox 974 1654 1306 1695" xml:lang="grc">
+        <span id="w_166" class="ocr_word" title="bbox 974 1654 1306 1695" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">προειρημένων</ins>
           </span>
         </span>
-        <span id="w_167" class="ocr_word" title="bbox 1337 1655 1557 1696" xml:lang="grc">
+        <span id="w_167" class="ocr_word" title="bbox 1337 1655 1557 1696" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τεττάρων</ins>
           </span>
         </span>
-        <span id="w_168" class="ocr_word" title="bbox 1587 1642 1820 1698" xml:lang="grc">
+        <span id="w_168" class="ocr_word" title="bbox 1587 1642 1820 1698" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διαφορῶν</ins>
           </span>
         </span>
-        <span id="w_169" class="ocr_word" title="bbox 1845 1643 1968 1695" xml:lang="grc">
+        <span id="w_169" class="ocr_word" title="bbox 1845 1643 1968 1695" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐκτὸς</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 220 1710 1968 1766">
-        <span id="w_170" class="ocr_word" title="bbox 220 1712 338 1754" xml:lang="grc">
+        <span id="w_170" class="ocr_word" title="bbox 220 1712 338 1754" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὄντα.</ins>
           </span>
@@ -1505,7 +1483,7 @@
             <del title="nlp 0.90">tres</del>
           </span>
         </span>
-        <span id="w_241" class="ocr_word" title="bbox 896 2211 1124 2263" xml:lang="grc">
+        <span id="w_241" class="ocr_word" title="bbox 896 2211 1124 2263" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">συντάξεις</ins>
           </span>
@@ -1586,18 +1564,12 @@
         </span>
         <span id="w_254" class="ocr_word" title="bbox 1855 2301 1970 2330">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">com-</ins>
+            <ins title="nlp 2.00">complures</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 220 2354 1967 2412">
-        <span id="w_255" class="ocr_word" title="bbox 220 2354 365 2410">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">plures</ins>
-            <del title="nlp 0.90">complures</del>
-          </span>
-        </span>
-        <span id="w_256" class="ocr_word" title="bbox 402 2354 630 2406" xml:lang="grc">
+        <span id="w_256" class="ocr_word" title="bbox 402 2354 630 2406" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">συντάξεις</ins>
           </span>
@@ -1670,48 +1642,43 @@
             <del title="nlp 0.90">praebeat:</del>
           </span>
         </span>
-        <span id="w_268" class="ocr_word" title="bbox 839 2431 988 2477" xml:lang="grc">
+        <span id="w_268" class="ocr_word" title="bbox 839 2431 988 2477" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">θέσεις</ins>
           </span>
         </span>
-        <span id="w_269" class="ocr_word" title="bbox 1030 2430 1184 2481" xml:lang="grc">
+        <span id="w_269" class="ocr_word" title="bbox 1030 2430 1184 2481" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λογικὰ</ins>
           </span>
         </span>
-        <span id="w_270" class="ocr_word" title="bbox 1215 2428 1288 2470" xml:lang="grc">
+        <span id="w_270" class="ocr_word" title="bbox 1215 2428 1288 2470" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_271" class="ocr_word" title="bbox 1319 2444 1408 2470" xml:lang="grc">
+        <span id="w_271" class="ocr_word" title="bbox 1319 2444 1408 2470" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_272" class="ocr_word" title="bbox 1438 2444 1519 2470" xml:lang="grc">
+        <span id="w_272" class="ocr_word" title="bbox 1438 2444 1519 2470" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_273" class="ocr_word" title="bbox 1552 2431 1807 2484" xml:lang="grc">
+        <span id="w_273" class="ocr_word" title="bbox 1552 2431 1807 2484" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φιλοσόφου</ins>
           </span>
         </span>
-        <span id="w_274" class="ocr_word" title="bbox 1839 2441 1967 2486" xml:lang="grc">
+        <span id="w_274" class="ocr_word" title="bbox 1839 2441 1967 2486" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σκεμ-</ins>
+            <ins title="nlp 2.00">σκεμμάτων,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 221 2497 1969 2555">
-        <span id="w_275" class="ocr_word" title="bbox 221 2497 391 2553" xml:lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μάτων,</ins>
-          </span>
-        </span>
         <span id="w_276" class="ocr_word" title="bbox 435 2499 573 2553">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">primo</ins>
@@ -1742,12 +1709,12 @@
             <del title="nlp 0.90">esse:</del>
           </span>
         </span>
-        <span id="w_281" class="ocr_word" title="bbox 1602 2499 1751 2551" xml:lang="grc">
+        <span id="w_281" class="ocr_word" title="bbox 1602 2499 1751 2551" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">θέσεις</ins>
           </span>
         </span>
-        <span id="w_282" class="ocr_word" title="bbox 1782 2503 1969 2555" xml:lang="grc">
+        <span id="w_282" class="ocr_word" title="bbox 1782 2503 1969 2555" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λογικαί.</ins>
           </span>
@@ -1904,33 +1871,27 @@
         </span>
         <span id="w_308" class="ocr_word" title="bbox 1878 2659 1969 2687">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ver-</ins>
+            <ins title="nlp 2.00">verbis:</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 223 2711 1968 2770">
-        <span id="w_309" class="ocr_word" title="bbox 223 2711 308 2754">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">bis:</ins>
-            <del title="nlp 0.90">verbis:</del>
-          </span>
-        </span>
-        <span id="w_310" class="ocr_word" title="bbox 357 2719 447 2755" xml:lang="grc">
+        <span id="w_310" class="ocr_word" title="bbox 357 2719 447 2755" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_311" class="ocr_word" title="bbox 476 2727 557 2755" xml:lang="grc">
+        <span id="w_311" class="ocr_word" title="bbox 476 2727 557 2755" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_312" class="ocr_word" title="bbox 596 2714 850 2769" xml:lang="grc">
+        <span id="w_312" class="ocr_word" title="bbox 596 2714 850 2769" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φιλοσόφου</ins>
           </span>
         </span>
-        <span id="w_313" class="ocr_word" title="bbox 888 2713 1166 2769" xml:lang="grc">
+        <span id="w_313" class="ocr_word" title="bbox 888 2713 1166 2769" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">σκεμμάτων,</ins>
           </span>
@@ -2085,17 +2046,11 @@
         </span>
         <span id="w_338" class="ocr_word" title="bbox 1893 2859 1969 2902">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ali-</ins>
+            <ins title="nlp 2.00">aliquis</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 223 2926 1968 2986">
-        <span id="w_339" class="ocr_word" title="bbox 223 2926 319 2982">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quis</ins>
-            <del title="nlp 0.90">aliquis</del>
-          </span>
-        </span>
         <span id="w_340" class="ocr_word" title="bbox 350 2926 558 2969">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">librorum</ins>
@@ -2300,24 +2255,22 @@
             <del title="nlp 0.90">praebet:</del>
           </span>
         </span>
-        <span id="w_373" class="ocr_word" title="bbox 1610 3143 1722 3200" xml:lang="grc">
+        <span id="w_373" class="ocr_word" title="bbox 1610 3143 1722 3200" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁμοῦ</ins>
           </span>
         </span>
-        <span id="w_374" class="ocr_word" title="bbox 1748 3146 1800 3186" xml:lang="grc">
+        <span id="w_374" class="ocr_word" title="bbox 1748 3146 1800 3186" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_375" class="ocr_word" title="bbox 1824 3146 1966 3188" xml:lang="grc">
+        <span id="w_375" class="ocr_word" title="bbox 1824 3146 1966 3188" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πάντα</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
