--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0195.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0195.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0195.png">
-      <!--<div class="ocr_carea" title="bbox 352 900 554 1234">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 375 911 443 958">
         <span id="w_0" class="ocr_word" title="bbox 375 911 443 958">
           <span class="alternatives">
@@ -19,8 +17,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 375 980 509 1032">
         <span id="w_1" class="ocr_word" title="bbox 375 980 509 1032">
           <span class="alternatives">
@@ -28,8 +24,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 372 1047 507 1096">
         <span id="w_2" class="ocr_word" title="bbox 372 1047 507 1096">
           <span class="alternatives">
@@ -37,8 +31,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 371 1114 537 1169">
         <span id="w_3" class="ocr_word" title="bbox 371 1114 537 1169">
           <span class="alternatives">
@@ -46,8 +38,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 368 1184 466 1230">
         <span id="w_4" class="ocr_word" title="bbox 368 1184 466 1230">
           <span class="alternatives">
@@ -55,10 +45,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 692 912 1670 1190">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 710 924 1654 1003">
         <span id="w_5" class="ocr_word" title="bbox 710 924 906 983">
           <span class="alternatives">
@@ -93,8 +79,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 810 1063 1382 1127">
         <span id="w_10" class="ocr_word" title="bbox 810 1063 1112 1116">
           <span class="alternatives">
@@ -117,21 +101,15 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 434 1770 1536 2140">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 618 1783 1353 1838">
-        <span id="w_13" class="ocr_word" title="bbox 618 1783 807 1832" xml:lang="grc">
+        <span id="w_13" class="ocr_word" title="bbox 618 1783 807 1832" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Ριaκ</ins>
-            <del title="nlp 0.90">διὲκ</del>
-            <del title="nlp 0.89">διέκ</del>
+            <ins title="nlp 2.00">PLEASE</ins>
           </span>
         </span>
-        <span id="w_14" class="ocr_word" title="bbox 841 1786 928 1834" xml:lang="grc">
+        <span id="w_14" class="ocr_word" title="bbox 841 1786 928 1834" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">οΟ</ins>
+            <ins title="nlp 2.00">DO</ins>
           </span>
         </span>
         <span id="w_15" class="ocr_word" title="bbox 961 1787 1086 1836">
@@ -154,7 +132,7 @@
             <del title="nlp 0.90">CARDS</del>
           </span>
         </span>
-        <span id="w_18" class="ocr_word" title="bbox 665 1885 747 1934" xml:lang="grc">
+        <span id="w_18" class="ocr_word" title="bbox 665 1885 747 1934" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὅ</ins>
           </span>
@@ -184,8 +162,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 486 2078 1476 2135">
         <span id="w_23" class="ocr_word" title="bbox 486 2078 798 2128">
           <span class="alternatives">
@@ -193,24 +169,22 @@
             <del title="nlp 0.90">UNIVERSITY</del>
           </span>
         </span>
-        <span id="w_24" class="ocr_word" title="bbox 828 2081 908 2130" xml:lang="grc">
+        <span id="w_24" class="ocr_word" title="bbox 828 2081 908 2130" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
+            <ins title="nlp 2.00">OF</ins>
           </span>
         </span>
-        <span id="w_25" class="ocr_word" title="bbox 941 2083 1227 2134" xml:lang="grc">
+        <span id="w_25" class="ocr_word" title="bbox 941 2083 1227 2134" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">τoΒοΝτο</ins>
+            <ins title="nlp 2.00">TORONTO</ins>
           </span>
         </span>
-        <span id="w_26" class="ocr_word" title="bbox 1262 2087 1476 2135" xml:lang="grc">
+        <span id="w_26" class="ocr_word" title="bbox 1262 2087 1476 2135" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ιι8̓́ MΥ</ins>
+            <ins title="nlp 2.00">LIBRARY</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
