--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0006.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0006.html
@@ -47,8 +47,7 @@
         </span>
         <span id="w_6" class="ocr_word" title="bbox 1120 2935 1316 2970">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Obenetrang,</ins>
-            <del title="nlp 0.90">Obenetrang,</del>
+            <ins title="nlp 2.00">Übersetzung,</ins>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1331 2937 1379 2961">
@@ -59,14 +58,12 @@
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1394 2936 1608 2968">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aasingsweiieii</ins>
-            <del title="nlp 0.90">aasingsweiieii</del>
+            <ins title="nlp 2.00">auszugsweisen</ins>
           </span>
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1621 2933 1811 2959">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Nachdruckei</ins>
-            <del title="nlp 0.90">Nachdruckei</del>
+            <ins title="nlp 2.00">Nachdruckes</ins>
           </span>
         </span>
       </span>
