--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0007.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0007.html
@@ -38,8 +38,7 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 946 954 1175 1012">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coUigendi</ins>
-            <del title="nlp 0.90">coUigendi</del>
+            <ins title="nlp 2.00">colligendi</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 1202 958 1354 998">
@@ -50,8 +49,7 @@
         </span>
         <span id="w_6" class="ocr_word" title="bbox 1379 955 1485 998">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">milii</ins>
-            <del title="nlp 0.90">milii</del>
+            <ins title="nlp 2.00">mihi</ins>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1511 955 1681 998">
@@ -75,8 +73,7 @@
         </span>
         <span id="w_11" class="ocr_word" title="bbox 434 1026 711 1083">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">yenerandus,</ins>
-            <del title="nlp 0.90">yenerandus,</del>
+            <ins title="nlp 2.00">venerandus,</ins>
           </span>
         </span>
         <span id="w_12" class="ocr_word" title="bbox 754 1041 866 1070">
@@ -190,8 +187,7 @@
       <span class="ocr_line" title="bbox 135 1169 1880 1226">
         <span id="w_32" class="ocr_word" title="bbox 258 1169 618 1226">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Philosophoruni</ins>
-            <del title="nlp 0.90">Philosophoruni</del>
+            <ins title="nlp 2.00">Philosophorum</ins>
           </span>
         </span>
         <span id="w_33" class="ocr_word" title="bbox 649 1169 925 1226">
@@ -208,8 +204,7 @@
         </span>
         <span id="w_35" class="ocr_word" title="bbox 1219 1170 1555 1226">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">proraitteretur,</ins>
-            <del title="nlp 0.90">proraitteretur,</del>
+            <ins title="nlp 2.00">promitteretur,</ins>
           </span>
         </span>
         <span id="w_36" class="ocr_word" title="bbox 1587 1171 1723 1226">
@@ -257,8 +252,7 @@
         </span>
         <span id="w_44" class="ocr_word" title="bbox 1344 1241 1650 1297">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">diseipulorum</ins>
-            <del title="nlp 0.90">diseipulorum</del>
+            <ins title="nlp 2.00">discipulorum</ins>
           </span>
         </span>
         <span id="w_45" class="ocr_word" title="bbox 1674 1243 1879 1298">
@@ -307,8 +301,7 @@
         </span>
         <span id="w_52" class="ocr_word" title="bbox 1206 1313 1462 1370">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coUegisset.</ins>
-            <del title="nlp 0.90">coUegisset.</del>
+            <ins title="nlp 2.00">collegisset.</ins>
           </span>
         </span>
         <span id="w_53" class="ocr_word" title="bbox 1526 1314 1621 1371">
@@ -394,8 +387,7 @@
       <span class="ocr_line" title="bbox 134 1456 1877 1515">
         <span id="w_67" class="ocr_word" title="bbox 307 1457 519 1513">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coUectas,</ins>
-            <del title="nlp 0.90">coUectas,</del>
+            <ins title="nlp 2.00">collectas,</ins>
           </span>
         </span>
         <span id="w_68" class="ocr_word" title="bbox 551 1460 600 1499">
@@ -474,8 +466,7 @@
         </span>
         <span id="w_80" class="ocr_word" title="bbox 837 1543 1007 1571">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">omncm</ins>
-            <del title="nlp 0.90">omncm</del>
+            <ins title="nlp 2.00">omnem</ins>
           </span>
         </span>
         <span id="w_81" class="ocr_word" title="bbox 1039 1529 1230 1572">
@@ -573,8 +564,7 @@
         </span>
         <span id="w_97" class="ocr_word" title="bbox 514 1673 696 1727">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">demuni,</ins>
-            <del title="nlp 0.90">demuni,</del>
+            <ins title="nlp 2.00">demum,</ins>
           </span>
         </span>
         <span id="w_98" class="ocr_word" title="bbox 739 1686 835 1714">
@@ -709,8 +699,7 @@
         </span>
         <span id="w_119" class="ocr_word" title="bbox 1035 1824 1121 1858">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">noh</ins>
-            <del title="nlp 0.90">noh</del>
+            <ins title="nlp 2.00">non</ins>
           </span>
         </span>
         <span id="w_120" class="ocr_word" title="bbox 1149 1817 1289 1858">
@@ -1035,8 +1024,7 @@
         </span>
         <span id="w_176" class="ocr_word" title="bbox 467 2246 646 2290">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coUecta</ins>
-            <del title="nlp 0.90">coUecta</del>
+            <ins title="nlp 2.00">collecta</ins>
           </span>
         </span>
         <span id="w_177" class="ocr_word" title="bbox 678 2250 795 2302">
@@ -1053,8 +1041,7 @@
         </span>
         <span id="w_179" class="ocr_word" title="bbox 1042 2249 1185 2289">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">auteni</ins>
-            <del title="nlp 0.90">auteni</del>
+            <ins title="nlp 2.00">autem</ins>
           </span>
         </span>
         <span id="w_180" class="ocr_word" title="bbox 1215 2249 1259 2288">
