--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0008.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0008.html
@@ -136,8 +136,7 @@
         </span>
         <span id="w_20" class="ocr_word" title="bbox 1458 346 1720 403">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Chrjsippea</ins>
-            <del title="nlp 0.90">Chrjsippea</del>
+            <ins title="nlp 2.00">Chrysippea</ins>
           </span>
         </span>
         <span id="w_21" class="ocr_word" title="bbox 1750 347 2023 404">
@@ -329,14 +328,12 @@
         </span>
         <span id="w_52" class="ocr_word" title="bbox 1187 629 1524 685">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">fi-agmentorum</ins>
-            <del title="nlp 0.90">fi-agmentorum</del>
+            <ins title="nlp 2.00">fragmentorum</ins>
           </span>
         </span>
         <span id="w_53" class="ocr_word" title="bbox 1562 629 1833 673">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coUectiones</ins>
-            <del title="nlp 0.90">coUectiones</del>
+            <ins title="nlp 2.00">collectiones</ins>
           </span>
         </span>
         <span id="w_54" class="ocr_word" title="bbox 1871 631 1932 673">
@@ -758,19 +755,18 @@
             <del title="nlp 0.90">volumine</del>
           </span>
         </span>
-        <span id="w_125" class="ocr_word" title="bbox 1829 1125 1910 1168">
+        <span id="w_125_0" class="ocr_word" title="bbox 1829 1125 1910 1168">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">hoc</ins>
-            <del title="nlp 0.90">hoc</del>
+            <ins class="alt" title="nlp 2.00">hoc</ins>
+          </span>
+        </span>
+        <span id="w_125_1" class="ocr_word" title="bbox 1829 1125 1910 1168">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">primum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 291 1198 968 1242">
-        <span id="w_127" class="ocr_word" title="bbox 291 1214 407 1242">
-          <span class="alternatives">
-            <ins title="nlp 2.00">primum</ins>
-          </span>
-        </span>
         <span id="w_128" class="ocr_word" title="bbox 440 1198 640 1242">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">volumen</ins>
@@ -1096,8 +1092,7 @@
       <span class="ocr_line" title="bbox 290 1623 2021 1685">
         <span id="w_181" class="ocr_word" title="bbox 290 1627 529 1685">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">fragraeuta</ins>
-            <del title="nlp 0.90">fragraeuta</del>
+            <ins title="nlp 2.00">fragmenta</ins>
           </span>
         </span>
         <span id="w_182" class="ocr_word" title="bbox 564 1626 772 1669">
@@ -1229,8 +1224,7 @@
         </span>
         <span id="w_205" class="ocr_word" title="bbox 1560 1766 1705 1808">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">stihim</ins>
-            <del title="nlp 0.90">stihim</del>
+            <ins title="nlp 2.00">stilum</ins>
           </span>
         </span>
         <span id="w_206" class="ocr_word" title="bbox 1746 1766 2022 1822">
@@ -1308,8 +1302,7 @@
         </span>
         <span id="w_219" class="ocr_word" title="bbox 1208 1923 1411 1952">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">numeras</ins>
-            <del title="nlp 0.90">numeras</del>
+            <ins title="nlp 2.00">numerus</ins>
           </span>
         </span>
         <span id="w_220" class="ocr_word" title="bbox 1437 1908 1645 1965">
@@ -1326,8 +1319,7 @@
         </span>
         <span id="w_222" class="ocr_word" title="bbox 1781 1908 2021 1966">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">fragmeuta</ins>
-            <del title="nlp 0.90">fragmeuta</del>
+            <ins title="nlp 2.00">fragmenta</ins>
           </span>
         </span>
       </span>
@@ -1572,8 +1564,7 @@
         </span>
         <span id="w_265" class="ocr_word" title="bbox 888 2266 1047 2309">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertii</ins>
-            <del title="nlp 0.90">Laertii</del>
+            <ins title="nlp 2.00">Laërtii</ins>
           </span>
         </span>
         <span id="w_266" class="ocr_word" title="bbox 1086 2268 1206 2308">
@@ -1754,8 +1745,7 @@
         </span>
         <span id="w_294" class="ocr_word" title="bbox 563 2554 724 2608">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">prirao</ins>
-            <del title="nlp 0.90">prirao</del>
+            <ins title="nlp 2.00">primo</ins>
           </span>
         </span>
         <span id="w_295" class="ocr_word" title="bbox 771 2552 1026 2595">
@@ -1789,12 +1779,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 287 2623 2017 2681">
-        <span id="w_300" class="ocr_word" title="bbox 287 2625 413 2681">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nieni,</ins>
-            <del title="nlp 0.90">Metathenieni,</del>
-          </span>
-        </span>
         <span id="w_301" class="ocr_word" title="bbox 443 2625 625 2681">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Persaei,</ins>
@@ -2076,8 +2060,7 @@
         </span>
         <span id="w_347" class="ocr_word" title="bbox 447 2980 589 3023">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nuUos</ins>
-            <del title="nlp 0.90">nuUos</del>
+            <ins title="nlp 2.00">nullos</ins>
           </span>
         </span>
         <span id="w_348" class="ocr_word" title="bbox 620 2980 849 3023">
@@ -2194,8 +2177,7 @@
         </span>
         <span id="w_366" class="ocr_word" title="bbox 592 3123 747 3178">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pai-tim</ins>
-            <del title="nlp 0.90">pai-tim</del>
+            <ins title="nlp 2.00">partim</ins>
           </span>
         </span>
         <span id="w_367" class="ocr_word" title="bbox 781 3122 832 3164">
@@ -2236,8 +2218,7 @@
         </span>
         <span id="w_373" class="ocr_word" title="bbox 1871 3120 2012 3162">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nuUus</ins>
-            <del title="nlp 0.90">nuUus</del>
+            <ins title="nlp 2.00">nullus</ins>
           </span>
         </span>
       </span>
