--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0012.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0012.html
@@ -10,15 +10,14 @@
   <body>
     <div class="ocr_page" id="i0012.png">
       <span class="ocr_line" title="bbox 256 129 1256 167">
-        <span id="w_0" class="ocr_word" title="bbox 256 129 344 167">
+        <span id="w_0_0" class="ocr_word" title="bbox 256 129 344 167">
           <span class="alternatives">
-            <ins title="nlp 2.00">νΙΙΙ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_1" class="ocr_word" title="bbox 993 131 1256 167">
+        <span id="w_0_1" class="ocr_word" title="bbox 256 129 344 167">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">PRAEFATIO</ins>
-            <del title="nlp 0.90">PRAEFATIO</del>
+            <ins class="alt" title="nlp 2.00">VIII</ins>
           </span>
         </span>
       </span>
@@ -110,8 +109,7 @@
         </span>
         <span id="w_17" class="ocr_word" title="bbox 936 312 1158 364">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">poetarum</ins>
-            <del title="nlp 0.90">poetarum</del>
+            <ins title="nlp 2.00">poëtarum</ins>
           </span>
         </span>
         <span id="w_18" class="ocr_word" title="bbox 1190 310 1462 366">
@@ -564,7 +562,7 @@
         </span>
         <span id="w_93" class="ocr_word" title="bbox 692 874 806 929" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταῖς</ins>
+            <ins title="nlp 2.00">(ταῖς</ins>
           </span>
         </span>
         <span id="w_94" class="ocr_word" title="bbox 829 877 1120 932" lang="grc">
@@ -586,7 +584,7 @@
         </span>
         <span id="w_97" class="ocr_word" title="bbox 1606 876 1719 934" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταῖς</ins>
+            <ins title="nlp 2.00">(ταῖς</ins>
           </span>
         </span>
         <span id="w_98" class="ocr_word" title="bbox 1744 878 1993 936" lang="grc">
@@ -1223,8 +1221,7 @@
         </span>
         <span id="w_207" class="ocr_word" title="bbox 1228 1662 1453 1714">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">poetarum</ins>
-            <del title="nlp 0.90">poetarum</del>
+            <ins title="nlp 2.00">poëtarum</ins>
           </span>
         </span>
         <span id="w_208" class="ocr_word" title="bbox 1497 1660 1731 1701">
@@ -1402,8 +1399,7 @@
       <span class="ocr_line" title="bbox 271 1944 2004 2002">
         <span id="w_238" class="ocr_word" title="bbox 271 1947 310 1989">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sl</ins>
-            <del title="nlp 0.90">sl</del>
+            <ins title="nlp 2.00">εἰ</ins>
           </span>
         </span>
         <span id="w_239" class="ocr_word" title="bbox 335 1946 383 1988" lang="grc">
@@ -1431,15 +1427,14 @@
             <ins class="alt" title="nlp 1.00">ναί·</ins>
           </span>
         </span>
-        <span id="w_244" class="ocr_word" title="bbox 1073 1957 1145 1986">
+        <span id="w_245_0" class="ocr_word" title="bbox 1170 1944 1218 1986">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins class="alt" title="nlp 2.00">οὔ·</ins>
           </span>
         </span>
-        <span id="w_245" class="ocr_word" title="bbox 1170 1944 1218 1986" lang="grc">
+        <span id="w_245_1" class="ocr_word" title="bbox 1170 1944 1218 1986">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins class="alt" title="nlp 2.00">τὸ</ins>
           </span>
         </span>
         <span id="w_246" class="ocr_word" title="bbox 1249 1951 1441 2000" lang="grc">
@@ -1575,8 +1570,7 @@
         </span>
         <span id="w_269" class="ocr_word" title="bbox 1230 2089 1367 2141">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">krjyov</ins>
-            <del title="nlp 0.90">krjyov</del>
+            <ins title="nlp 2.00">λῆγον</ins>
           </span>
         </span>
         <span id="w_270" class="ocr_word" title="bbox 1402 2086 1548 2141">
@@ -1684,8 +1678,7 @@
         </span>
         <span id="w_287" class="ocr_word" title="bbox 449 2228 495 2287">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(fj</ins>
-            <del title="nlp 0.90">(fj</del>
+            <ins title="nlp 2.00">(ἡ</ins>
           </span>
         </span>
         <span id="w_288" class="ocr_word" title="bbox 526 2227 793 2286" lang="grc">
